【base】session,iocp,iocpbuffer等抽象

--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -339,16 +339,23 @@
     <ClInclude Include="..\common\memorypool\Interface\IMemoryPool.h" />
     <ClInclude Include="..\common\memorypool\Interface\IMemoryPoolMgr.h" />
     <ClInclude Include="..\common\memorypool\memorypool.h" />
+    <ClInclude Include="..\common\net\Defs\FS_BufferFactory.h" />
+    <ClInclude Include="..\common\net\Defs\FS_IocpBuffer.h" />
+    <ClInclude Include="..\common\net\Defs\FS_IocpBufferImpl.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBuffer.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBufferArrayImpl.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBufferImpl.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetBufferArray.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetDefs.h" />
     <ClInclude Include="..\common\net\Defs\FS_Packet.h" />
+    <ClInclude Include="..\common\net\Defs\FS_Packet2.h" />
+    <ClInclude Include="..\common\net\Defs\FS_Packet2Impl.h" />
     <ClInclude Include="..\common\net\Defs\FS_PacketImpl.h" />
     <ClInclude Include="..\common\net\Defs\FS_SessionInfo.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatComp.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatCompImpl.h" />
+    <ClInclude Include="..\common\net\Defs\IFS_Buffer.h" />
+    <ClInclude Include="..\common\net\Defs\IFS_BufferImpl.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
     <ClInclude Include="..\common\net\Defs\PacketQueueNode.h" />
     <ClInclude Include="..\common\net\Defs\Sender.h" />
@@ -483,9 +490,12 @@
     <ClCompile Include="..\common\memorypool\Impl\MemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
+    <ClCompile Include="..\common\net\Defs\FS_BufferFactory.cpp" />
+    <ClCompile Include="..\common\net\Defs\FS_IocpBuffer.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_NetBuffer.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_NetBufferArray.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_Packet.cpp" />
+    <ClCompile Include="..\common\net\Defs\FS_Packet2.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_SessionInfo.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
     <ClCompile Include="..\common\net\Defs\PacketQueueNode.cpp" />
