【base】清理旧的服务端框架，完善新的服务端框架

--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -342,62 +342,40 @@
     <ClInclude Include="..\common\net\Defs\FS_BufferFactory.h" />
     <ClInclude Include="..\common\net\Defs\FS_IocpBuffer.h" />
     <ClInclude Include="..\common\net\Defs\FS_IocpBufferImpl.h" />
-    <ClInclude Include="..\common\net\Defs\FS_NetBuffer.h" />
-    <ClInclude Include="..\common\net\Defs\FS_NetBufferArrayImpl.h" />
-    <ClInclude Include="..\common\net\Defs\FS_NetBufferImpl.h" />
-    <ClInclude Include="..\common\net\Defs\FS_NetBufferArray.h" />
     <ClInclude Include="..\common\net\Defs\FS_NetDefs.h" />
-    <ClInclude Include="..\common\net\Defs\FS_Packet.h" />
-    <ClInclude Include="..\common\net\Defs\FS_Packet2.h" />
-    <ClInclude Include="..\common\net\Defs\FS_Packet2Impl.h" />
-    <ClInclude Include="..\common\net\Defs\FS_PacketImpl.h" />
-    <ClInclude Include="..\common\net\Defs\FS_SessionInfo.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatComp.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatCompImpl.h" />
     <ClInclude Include="..\common\net\Defs\IFS_Buffer.h" />
     <ClInclude Include="..\common\net\Defs\IFS_BufferImpl.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
-    <ClInclude Include="..\common\net\Defs\PacketQueueNode.h" />
-    <ClInclude Include="..\common\net\Defs\Sender.h" />
-    <ClInclude Include="..\common\net\Defs\SenderImpl.h" />
     <ClInclude Include="..\common\net\Defs\ServerCompsDef.h" />
     <ClInclude Include="..\common\net\Impl\FS_Addr.h" />
     <ClInclude Include="..\common\net\Impl\FS_AddrImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_Client.h" />
-    <ClInclude Include="..\common\net\Impl\FS_ClientImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_ConnectorFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_Iocp.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpConnector.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_IocpMsgHandler.h" />
-    <ClInclude Include="..\common\net\Impl\FS_IocpMsgHandlerImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgDispatcher.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgDispatcherImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransfer.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServer.h" />
-    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpSession.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpSessionImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_MainIocpServer.h" />
-    <ClInclude Include="..\common\net\Impl\FS_MainIocpServerImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_MsgHandlerFactory.h" />
+    <ClInclude Include="..\common\net\Impl\FS_MsgDispatcherFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgReadStream.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgReadStreamImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgTransferFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgWriteStream.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgWriteStreamImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_Server.h" />
     <ClInclude Include="..\common\net\Impl\FS_ServerConfigMgrFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_ServerCore.h" />
     <ClInclude Include="..\common\net\Impl\FS_ServerCoreImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_ServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionMgr.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionMgrImpl.h" />
-    <ClInclude Include="..\common\net\Impl\FS_TcpServer.h" />
-    <ClInclude Include="..\common\net\Impl\FS_TcpServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\IFS_Connector.h" />
     <ClInclude Include="..\common\net\Impl\IFS_ConnectorImpl.h" />
-    <ClInclude Include="..\common\net\Impl\IFS_MsgHandler.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_MsgDispatcher.h" />
     <ClInclude Include="..\common\net\Impl\IFS_MsgTransfer.h" />
     <ClInclude Include="..\common\net\Impl\IFS_MsgTransferImpl.h" />
     <ClInclude Include="..\common\net\Impl\IFS_ServerConfigMgr.h" />
@@ -495,36 +473,24 @@
     <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_BufferFactory.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_IocpBuffer.cpp" />
-    <ClCompile Include="..\common\net\Defs\FS_NetBuffer.cpp" />
-    <ClCompile Include="..\common\net\Defs\FS_NetBufferArray.cpp" />
-    <ClCompile Include="..\common\net\Defs\FS_Packet.cpp" />
-    <ClCompile Include="..\common\net\Defs\FS_Packet2.cpp" />
-    <ClCompile Include="..\common\net\Defs\FS_SessionInfo.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
-    <ClCompile Include="..\common\net\Defs\PacketQueueNode.cpp" />
-    <ClCompile Include="..\common\net\Defs\Sender.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Addr.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_Client.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_ConnectorFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Iocp.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_IocpConnector.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_IocpMsgHandler.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_IocpMsgDispatcher.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransfer.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransferServer.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_IocpSession.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_MainIocpServer.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_MsgHandlerFactory.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_MsgDispatcherFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MsgReadStream.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MsgTransferFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MsgWriteStream.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_Server.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_ServerConfigMgrFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_ServerCore.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_SessionFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_SessionMgr.cpp" />
-    <ClCompile Include="..\common\net\Impl\FS_TcpServer.cpp" />
     <ClCompile Include="..\common\net\Impl\IFS_Connector.cpp" />
-    <ClCompile Include="..\common\net\Impl\IFS_MsgHandler.cpp" />
+    <ClCompile Include="..\common\net\Impl\IFS_MsgDispatcher.cpp" />
     <ClCompile Include="..\common\net\Impl\IFS_MsgTransfer.cpp" />
     <ClCompile Include="..\common\net\Impl\IFS_ServerConfigMgr.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\Example.cpp" />
