--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -280,6 +280,13 @@
     <ClInclude Include="..\common\component\Impl\GlobalInitialize.h" />
     <ClInclude Include="..\common\component\Impl\InterfaceComps.h" />
     <ClInclude Include="..\common\component\Impl\InterfaceCompsImpl.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Defs\FS_MessageBlock.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Defs\FS_MessageBlockImpl.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Impl\MessageQueue.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Impl\MessageQueueImpl.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Impl\MessageQueueMgr.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\Impl\MessageQueueMgrImpl.h" />
+    <ClInclude Include="..\common\component\Impl\MessageQueue\MessageQueue.h" />
     <ClInclude Include="..\common\component\Impl\SingletonAgency.h" />
     <ClInclude Include="..\common\component\Impl\SingletonAgencyImpl.h" />
     <ClInclude Include="..\common\component\Impl\SmartVar\SmartVar.h" />
@@ -445,6 +452,9 @@
     <ClCompile Include="..\common\component\Impl\FS_ThreadPool.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_TlsTable.cpp" />
     <ClCompile Include="..\common\component\Impl\GlobalInitialize.cpp" />
+    <ClCompile Include="..\common\component\Impl\MessageQueue\Defs\FS_MessageBlock.cpp" />
+    <ClCompile Include="..\common\component\Impl\MessageQueue\Impl\MessageQueue.cpp" />
+    <ClCompile Include="..\common\component\Impl\MessageQueue\Impl\MessageQueueMgr.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVar.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVarArithmetic.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVarTraits.cpp" />
