--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="TestInst\TestMathUtil.h" />
     <ClInclude Include="TestInst\TestMemoryPool.h" />
     <ClInclude Include="TestInst\TestInterfaceComps.h" />
+    <ClInclude Include="TestInst\TestMessageQueue.h" />
     <ClInclude Include="TestInst\TestObjPool.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
     <ClInclude Include="TestInst\TestRtti.h" />
