【base】测试stream的序列化反序列化接口,添加简要session信息

--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="TestInst\TestRtti.h" />
     <ClInclude Include="TestInst\TestServer.h" />
     <ClInclude Include="TestInst\TestSingleton.h" />
+    <ClInclude Include="TestInst\TestStream.h" />
     <ClInclude Include="TestInst\TestString.h" />
     <ClInclude Include="TestInst\TestSystemUtil.h" />
     <ClInclude Include="TestInst\TestThreadPool.h" />
