--- a/base/base/base.vcxproj.filters
+++ b/base/base/base.vcxproj.filters
@@ -1068,6 +1068,9 @@
     <ClInclude Include="..\common\net\Defs\BriefSessionInfoImpl.h">
       <Filter>common\net\Defs</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\net\Defs\ProtocolDefsImpl.h">
+      <Filter>common\net\protocol\defs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
